fix: layout issues

--- a/home/src/css/tailwind.css
+++ b/home/src/css/tailwind.css
@@ -28,15 +28,15 @@ h6 {
 }
 
 .post h2 {
-	@apply text-2xl tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
+	@apply font-bold text-2xl tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
 }
 
 .post h3 {
-	@apply text-xl tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
+	@apply font-bold text-xl tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
 }
 
 .post h4 {
-	@apply text-lg tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
+	@apply font-bold text-lg tracking-tighter mb-2 text-gray-800 dark:text-white mt-14;
 }
 
 .post img {
